--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 16px;
 }
 
 html, body {
@@ -19,4 +20,10 @@ main > h1 {
   text-align: center;
   font-size: 3.5em;
   color: purple;
+}
+
+
+p {
+  color: aqua;
+  font-size: 1em;
 }
